[영문/브랜드스토리] 번역 완료 (임시)

--- a/status.html
+++ b/status.html
@@ -11,7 +11,7 @@
 
   <style>
   :root {
-    --point-color: #F6AB00;
+    --point-color: #ea5404;
   }
 
   @font-face {
@@ -171,6 +171,7 @@
             <col style="width:5%">
             <col style="width:5%">
             <col style="width:5%">
+            <col style="width:5%">
             <col style="width:*">
           </colgroup>
           <thead>
@@ -182,6 +183,7 @@
               <th>디자인</th>
               <th>퍼블(PC)</th>
               <th>퍼블(MO)</th>
+              <th>번역</th>
               <th>COMMENT</th>
             </tr>
           </thead>
@@ -202,6 +204,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -217,6 +220,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -232,6 +236,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                   <li style="text-decoration: line-through;">네이버 리뷰 연동 이슈로 구현 가능 여부 확인 대기</li>
@@ -249,6 +254,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -264,6 +270,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -279,6 +286,7 @@
               <td class="t_center">-</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                   <li>체험장 안내 시안과 동일 / 세종본사만 표시</li>
@@ -295,6 +303,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -310,6 +319,7 @@
               <td class="t_center">-</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -325,6 +335,7 @@
               <td class="t_center">-</td>
               <td class="t_center">-</td>
               <td class="t_center">-</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                   <li>다른 제품들과 동일한 틀 활용</li>
@@ -341,6 +352,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                   <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의(통이미지로 삽입)</li>
@@ -358,6 +370,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -373,6 +386,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                   <!-- <li></li> -->
@@ -389,6 +403,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -401,6 +416,7 @@
               <td class="btn">
                 <a class="btnPc" href="/notice_kr" target="_blank">View</a>
               </td>
+              <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
@@ -419,6 +435,7 @@
               <td class="t_center">-</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                   <li>보도자료 시안과 동일</li>
@@ -435,6 +452,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -450,6 +468,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center"></td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -465,6 +484,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -477,6 +497,7 @@
               <td class="btn">
                 <a class="btnPc" href="/contact_kr/write" target="_blank">View</a>
               </td>
+              <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center"></td>
@@ -494,6 +515,7 @@
               <td class="btn">
                 <a class="btnPc" href="" target="_blank">View</a>
               </td>
+              <td class="t_center"></td>
               <td class="t_center"></td>
               <td class="t_center"></td>
               <td class="t_center"></td>
