[영문/기술소개] 번역 완료 (임시)
-차별화 기술 이미지 번역 필요

--- a/status.html
+++ b/status.html
@@ -303,7 +303,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -319,7 +319,7 @@
               <td class="t_center">-</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -335,7 +335,7 @@
               <td class="t_center">-</td>
               <td class="t_center">-</td>
               <td class="t_center">-</td>
-              <td class="t_center"></td>
+              <td class="t_center">-</td>
               <td>
                 <ul class="comment">
                   <li>다른 제품들과 동일한 틀 활용</li>
@@ -352,7 +352,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                   <li>2024-03-08(금) : 상세내용 영역 관련 업체와 협의(통이미지로 삽입)</li>
