[기타] 진행상황 업데이트

--- a/status.html
+++ b/status.html
@@ -370,7 +370,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
@@ -386,7 +386,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                   <!-- <li></li> -->
@@ -452,7 +452,7 @@
               <td class="t_center">O</td>
               <td class="t_center">O</td>
               <td class="t_center">O</td>
-              <td class="t_center"></td>
+              <td class="t_center">▲</td>
               <td>
                 <ul class="comment">
                 </ul>
