[영문/반응형] 메인 완료

--- a/status.html
+++ b/status.html
@@ -409,7 +409,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>새소식 > 공지사항</td>
               <td class="t_center">게시판</td>
               <td><p class="target"><span class='link'>/notice_kr</span></p></td>
@@ -490,7 +490,7 @@
                 </ul>
               </td>
             </tr>
-            <tr class="">
+            <tr class="fin">
               <td>고객지원 > 문의하기</td>
               <td class="t_center">게시판(개발)</td>
               <td><p class="target"><span class='link'>/contact_kr/write</span></p></td>
